# langchain-framework

./: .env  .gitignore  02_youtubechatbot.ipynb  03_live_currency_converter.ipynb  README.md  document_similarity.ipynb  pyproject.toml  requirements.txt
01.ChatModels/: 1_open_chatmodel.ipynb
02.EmbeddedModels/: 1_embedding.ipynb
04.OutputParsers/: outpurparser.ipynb
06.Runables/: agents.txt
09.VectorStore/: vectorstore.ipynb
1.LLMs/: llm_demo.ipynb
10.Retrievers/: retrievers.ipynb
11.Tools/: 01_tools.ipynb  02_toolcalling.ipynb
12.agents/: agents.ipynb
8.DocumentLoader/: agent-and-agenticai.txt  documentloader.ipynb
9.Textplitters/: textsplitter.ipynb
Notes/: 04_chains.md  05_runable.md  6.document-loader.md  7.TextSplitting.md  8.......uncomplete.md  8.uncomplete-notes.md
src/Notes/: 01_langchain-components.md  02_Models.md  03_Structured-output.md  05_runable.md
src/langchain_framework/: __init__.py
src/langchain_framework/2.ChatModels/: 2_close_chatmodel.ipynb
src/langchain_framework/4.StructuredOutput/: 1_structuredoutput.ipynb
src/langchain_framework/6.Chains/: chains.ipynb
src/langchain_framework/7.Runables/: Runable.ipynb
